Bug 106629 - [SNB,IVB,HSW,BDW] dEQP-EGL.functional.image.create.gles2_cubemap_negative_z_rgb_read_pixels
Summary: [SNB,IVB,HSW,BDW] dEQP-EGL.functional.image.create.gles2_cubemap_negative_z_r...
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/DRI/i965 (show other bugs)
Version: git
Hardware: Other All
: medium normal
Assignee: Jason Ekstrand
QA Contact: Intel 3D Bugs Mailing List
URL:
Whiteboard:
Keywords: bisected, regression
Depends on:
Blocks:
 
Reported: 2018-05-23 12:42 UTC by Mark Janes
Modified: 2018-05-25 21:02 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Mark Janes 2018-05-23 12:42:36 UTC
regressed together with:
dEQP-EGL.functional.image.create.gles2_cubemap_negative_x_rgb_read_pixels
dEQP-EGL.functional.image.create.gles2_cubemap_positive_z_rgb_read_pixels
dEQP-EGL.functional.image.create.gles2_cubemap_positive_y_rgb_read_pixels
dEQP-EGL.functional.image.create.gles2_cubemap_negative_y_rgb_read_pixels
dEQP-EGL.functional.image.create.gles2_cubemap_negative_z_rgb_read_pixels
dEQP-EGL.functional.image.render_multiple_contexts.gles2_cubemap_negative_x_rgb8_read_pixels
dEQP-EGL.functional.image.render_multiple_contexts.gles2_cubemap_negative_y_rgb8_read_pixels
dEQP-EGL.functional.image.render_multiple_contexts.gles2_cubemap_negative_z_rgb8_read_pixels
dEQP-EGL.functional.image.render_multiple_contexts.gles2_cubemap_positive_y_rgb8_read_pixels
dEQP-EGL.functional.image.render_multiple_contexts.gles2_cubemap_positive_z_rgb8_read_pixels

Standard Output

Creating gles2 context with config id: 2 context: 0
Creating gles2 context with config id: 2 context: 1
Reading with ReadPixels from renderbuffer
Image comparison failed: max difference = (157, 253, 157, 0), threshold = (2, 2, 2, 255)

Bisected to:
33affda8bf6cbcff14d51f6d99635c8f41432cda
Author:     Jason Ekstrand <jason@jlekstrand.net>
i965/miptree: Use blorp for blit maps on gen6+
Comment 1 Jason Ekstrand 2018-05-25 21:02:40 UTC
This has been fixed by the following commit:

commit ae514ca695a599cdd0b7c22f48fd4d721671b0cb
Author: Jason Ekstrand <jason.ekstrand@intel.com>
Date:   Fri May 25 12:27:17 2018 -0700

    intel/blorp: Support blits and clears on surfaces with offsets
    
    For certain EGLImage cases, we represent a single slice or LOD of an
    image with a byte offset to a tile and X/Y intratile offsets to the
    given slice.  Most of i965 is fine with this but it breaks blorp.  This
    is a terrible way to represent slices of a surface in EGL and we should
    stop some day but that's a very scary and thorny path.  This gets blorp
    to start working with those surfaces and fixes some dEQP EGL test bugs.
    
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=106629
    Cc: mesa-stable@lists.freedesktop.org
    Reviewed-by: Kenneth Graunke <kenneth@whitecape.org>


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.